# shitmarket

./: .gitignore  Building ShitMarket Prediction Platform.md  MAINNET_DEPLOYMENT.md  README.md  build_contract.sh  custom_push.sh  diff.txt  fix_deps.sh  fix_div.js  fix_optimistic_room.js  fix_page.js  fix_rooms.js  full_diff.txt  next.config.mjs  package-lock.json  package.json  production_audit.md  push_files.sh  rewrite_profile.js  tailwind.config.ts  task_progress.md  test-browser.js  test.js  test2.js  test_pda_query.js  tsconfig.json  untracked.txt  update_fees.js  update_rust.js  update_tests.js
evm/: hardhat.config.js  package-lock.json  package.json
indexer/: .env.example  Dockerfile  check_room.js  check_token_mint.js  docker-compose.yml  docker-entrypoint.sh  fix_all_evm_rooms.js  fix_db.js  fix_db2.js  fix_db3.js  fix_room.js  get_room.js  list_recent_rooms.js  migrate_columns.js  package-lock.json  package.json  prometheus.yml  test_base58.js  test_fetch.js  test_logs.js  test_prisma.js  test_space.js  tsconfig.json
k8s/: configmap.yaml  frontend-deployment.yaml  frontend-hpa.yaml  indexer-deployment.yaml  indexer-hpa.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  postgres-replica-statefulset.yaml  postgres-statefulset.yaml  redis-deployment.yaml  secrets.yaml
mobile/: App.tsx  index.ts  metro.config.js  package-lock.json  package.json
program/: Anchor.toml  (+12 more)
program/cpufeatures-patch/: Cargo.toml
program/programs/shitmarket/: Cargo.toml
program/programs/shitmarket/src/: error.rs  error.rs.bak  lib.rs  lib.rs.bak  price.rs  pyth.rs
(+198 files in other folders)
